tests/fail/recursive_array_alias.tig
let
	type a = b
	type b = c
	type c = array of a
in
end
