tests/fail/recursive_array_alias.err
Semantic Error: Invalid recursive definition of the array c at line 4.
